--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,16 @@ a:hover {
   .map-container {
     height: 300px;
   }
+
+  .navbar-brand img {
+    height: 24px;
+  }
+
+  .page-title {
+    font-size: 1.5rem;
+    margin: 0 auto;
+    padding: 10px;
+  }
 }
 
 .fade-in {
