--- a/src/index.css
+++ b/src/index.css
@@ -256,5 +256,12 @@ a:hover {
 }
 
 .main-content {
-  margin-top: 60px; /* Ajusta este valor según la altura del navbar */
+  margin-top: 80px; /* Aumenta el margen superior */
+}
+
+.page-title {
+  font-size: 1.2rem;
+  line-height: 1.4;
+  padding: 10px;
+  text-align: center;
 }
